src/snapshot_middleware/snapshots/librojo__snapshot_middleware__json__test__instance_from_vfs.snap
---
source: src/snapshot_middleware/json.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo.json
  relevant_paths:
    - /foo.json
    - /foo.meta.json
    - /foo.meta.jsonc
  context:
    emit_legacy_scripts: true
  specified_id: ~
  middleware: ~
  schema: ~
name: foo
class_name: ModuleScript
properties:
  Source:
    String: "return {\n\t[\"1invalidident\"] = \"nice\",\n\tarray = {1, 2, 3},\n\t[\"false\"] = false,\n\tfloat = 1234.5452,\n\tint = 1234,\n\tnull = nil,\n\tobject = {\n\t\thello = \"world\",\n\t},\n\t[\"true\"] = true,\n}"
children: []
